# SPL2EVPath

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.h  config.h.cmake  lex.yy.c  main.c  parse  parse.c  spl.l  spl.structs  spl.tab.c  spl.tab.h  spl.y  spl_internal.h  spl_node.c  struct.pl  structs.h  trivial.spl  vwap.spl
evpath_code/: simple_join.c  simple_split.c  trivial.c
spl_code/: simple_aggregate.spl  simple_barrier.spl  simple_join.spl  simple_split.spl  trivial.spl
spl_code/001_hello_world_in_spl/: .project
spl_code/002_source_sink_at_work/: .project
spl_code/003_sink_at_work/: info.xml
spl_code/004_delay_at_work/: .project  info.xml
spl_code/005_throttle_at_work/: .project  info.xml
spl_code/006_barrier_at_work/: .project  info.xml
spl_code/008_get_submission_time_value/: Main.spl  info.xml  toolkit.xml
spl_code/009_custom_operator_using_get_submission_time_value/: .project  Main.spl
spl_code/010_get_compile_time_value/: toolkit.xml
spl_code/011_compiler_intrinsic_functions/: .project  toolkit.xml
spl_code/012_filter_functor_at_work/: .project  toolkit.xml
spl_code/013_punctor_at_work/: .project  info.xml
spl_code/014_sort_at_work/: info.xml
spl_code/015_join_at_work/: .project  info.xml  toolkit.xml
spl_code/017_filesource_filesink_at_work/: .project  info.xml
spl_code/018_directory_scan_at_work/: toolkit.xml
spl_code/019_import_export_at_work/: .project  toolkit.xml
spl_code/020_metrics_sink_at_work/: .project  info.xml
spl_code/021_pair_at_work/: .project  toolkit.xml
(+157 files in other folders)
